--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="creative.png" />
+  <link rel="icon" type="image/svg+xml" href="/icons/creative.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Employment Nexus</title>
 </head>
